--- a/style.css
+++ b/style.css
@@ -100,6 +100,21 @@ hr{
     margin-left: 398px;
 
 }
+
+.bandera{
+    margin-top: 97px;
+    margin-left: 3px;
+}
+.gdun{
+    margin-left: 1500px;
+}
+.hihihaha{
+    margin-left: 1500px;
+    margin-top: 50px;
+}
+.sobachka{
+    margin-left: 1500px;
+}
 footer{
     width: 1832px;
     height: 180px;
